[package]
name = "blog-server"
version = "0.4.0"
authors = ["mygnu <tech@hgill.io>"]
description = "static blog server for serving likes and comments for posts."
edition = "2018"
license = "LGPL-3.0-or-later"

[dependencies]
actix = "0.8.2"
actix-web="1.0.0-rc"
chrono = "0.4.6"
config = "0.9.2"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
diesel_migrations = {version= "1.4.0", features = ["sqlite"]}
dotenv = "0.13.0"
env_logger = "0.6.0"
failure = "0.1.5"
futures = "0.1"
num_cpus = "^1.10"
r2d2 = "0.8.3"
serde = {version = "1.0.88", features = ["derive"]}

[profile.release]
lto= true
opt-level= 3

[package.metadata.deb]
maintainer = "Harry Gill <tech@gill.net.in>"
copyright = "2019, Harry Gill"
depends = "systemd"
conf-files = ["/usr/local/etc/blog-server-config.ini", "/etc/systemd/system/blog-server.service"]
extended-description = """\
static blog server for serving likes and comments for posts.\
"""
section = "admin"
priority = "optional"
assets = [
    ["target/release/blog-server", "/usr/local/bin/", "755"],
    ["assets/blog-server.service", "/etc/systemd/system/", "644"],
    ["assets/blog-server-config.ini", "/usr/local/etc/", "644"],
]
