[package]
name = "blog-server"
version = "0.5.1"
authors = ["mygnu <tech@hgill.io>"]
description = "static blog server for serving likes and comments for posts."
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
actix-web="4.6"
chrono = "0.4"
clap = { version = "4.5", features = ["derive","env"] }
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
diesel_migrations = { version= "2.1", features = ["sqlite"]}
serde = { version = "1.0", features = ["derive"]}
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto= true
opt-level= 3

[package.metadata.deb]
maintainer = "Harry Gill <tech@gill.net.in>"
copyright = "2023, Harry Gill"
depends = "systemd"
conf-files = ["/etc/systemd/system/blog-server.service"]
extended-description = """\
static blog server for serving likes and comments for posts.\
"""
section = "admin"
priority = "optional"
assets = [
    ["target/release/blog-server", "/usr/local/bin/", "755"],
    ["assets/blog-server.service", "/etc/systemd/system/", "644"],
]
